--- a/drupal_hero_theme/templates/page.html.twig
+++ b/drupal_hero_theme/templates/page.html.twig
@@ -7,7 +7,15 @@
 
 		<nav class="b-navbar">
 
+			<h2 class="sr-only">Main page navigation</h2>
+
+			<button class="b-navbar__button js-navbar-button" type="button">
+				<span class="b-navbar__bar js-navbar-bar"></span>
+				<span class="b-navbar__bar js-navbar-bar"></span>
+			</button>
+
 			{{ page.navbar }}
+				
 
 		</nav>
 
