--- a/drupal_hero_theme/css/styles.css
+++ b/drupal_hero_theme/css/styles.css
@@ -1,16 +1,52 @@
 /**
  * Main file for hero theme styles. We'll use the BEM methodology for
- * modular css.
+ * modular css. Classes without the 'b' namespace are built in the Drupal template, so we
+ * just override them. Also, sometimes it's very impractical to apply styles to nested elements, so we use
+ * descendent selectors when necessary, even tough that goes against BEM's conventions. Beware, tough, we
+ * seldom do this.
  */
 @keyframes fadeIn {
   from {
-    opacity: 0; }
+    opacity: 0;
+  }
   to {
-    opacity: 1; } }
+    opacity: 1;
+  }
+}
+@keyframes topBarStart {
+  100% {
+    transform: rotate(45deg) translate(0.1rem, 0.2rem);
+  }
+}
+@keyframes bottomBarStart {
+  100% {
+    transform: rotate(-45deg) translate(0.1rem, -0.2rem);
+  }
+}
+@keyframes topBarRestart {
+  0% {
+    transform: rotate(45deg) translate(0.1rem, 0.2rem);
+  }
+  100% {
+    transform: none;
+  }
+}
+@keyframes bottomBarRestart {
+  0% {
+    transform: rotate(-45deg) translate(0.1rem, -0.2rem);
+  }
+  100% {
+    transform: none;
+  }
+}
 * {
   box-sizing: border-box;
   margin: 0;
-  padding: 0; }
+  padding: 0;
+}
+*:focus {
+  outline: 1px solid #fff441;
+}
 
 .sr-only {
   position: absolute;
@@ -22,18 +58,98 @@
   white-space: nowrap;
   -webkit-clip-path: inset(50%);
   clip-path: inset(50%);
-  border: 0; }
+  border: 0;
+}
 
 .b-page {
   position: relative;
   min-height: 100vh;
-  background-color: #111; }
+  background-color: #111;
+}
 
 .b-navbar {
+  margin-top: 40px;
   position: relative;
-  padding: .5rem .8rem;
-  background-image: url("../images/paper-background-texture.jpg");
-  background-repeat: repeat;
-  background-position: center; }
+  padding: 0.5rem 0.8rem;
+  background-color: #fff88d;
+}
+.b-navbar__button {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #222;
+  padding: 0.7rem;
+  background-color: #fff441;
+  box-shadow: 1px 2px 2px rgba(17, 17, 17, 0.6);
+}
+@media (min-width: 576px) {
+  .b-navbar__button {
+    display: none;
+  }
+}
+.b-navbar__bar {
+  position: relative;
+  display: block;
+  width: 1.5rem;
+  height: 0.2rem;
+  background-color: #333;
+}
+.b-navbar__bar:not(:last-child) {
+  margin-bottom: 0.2rem;
+}
 
-/*# sourceMappingURL=styles.css.map */
+.b-navbar-content-container,
+.b-menu-list {
+  display: none;
+  flex-flow: column nowrap;
+}
+@media (min-width: 576px) {
+  .b-navbar-content-container,
+.b-menu-list {
+    /**
+     * The 'important' is necessary here to avoid js hiding it on button toggle
+     * if hte user resize the page
+     */
+    display: flex !important;
+    flex-flow: row nowrap;
+  }
+}
+.b-navbar-content-container--padded,
+.b-menu-list--padded {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
+.b-menu-list {
+  flex: 1;
+  list-style-type: none;
+  padding-left: 0;
+}
+.b-menu-list__item {
+  padding-bottom: 0.2rem;
+  padding-top: 0.2rem;
+  text-align: center;
+}
+@media (min-width: 576px) {
+  .b-menu-list__item {
+    border-bottom: 2px solid black;
+    margin-right: 1.5rem;
+    transition-duration: 0.4s;
+  }
+  .b-menu-list__item:hover {
+    border-color: #666;
+  }
+}
+.b-menu-list__item > a {
+  font-family: "Permanent Marker", cursive;
+  font-size: 1.2rem;
+  color: #444;
+  text-decoration: none;
+  transition-duration: 0.4s;
+}
+.b-menu-list__item > a:hover {
+  color: #111;
+}
+
+/*# sourceMappingURL=css/styles.css.map */
