--- a/drupal_hero_theme/scss/animations.scss
+++ b/drupal_hero_theme/scss/animations.scss
@@ -5,3 +5,20 @@
 	from { opacity: 0; }
 	to { opacity: 1; }
 }
+
+// Animations for navbar bars
+
+@keyframes topBarStart { 100% {	transform: rotate(45deg) translate(.1rem, .2rem); } }
+@keyframes bottomBarStart { 100% { transform: rotate(-45deg) translate(.1rem, -.2rem); } }
+
+// Restarting animations
+
+@keyframes topBarRestart {
+	0% { transform: rotate(45deg) translate(.1rem, .2rem); }
+	100% { transform: none; }
+}
+
+@keyframes bottomBarRestart {
+	0% { transform: rotate(-45deg) translate(.1rem, -.2rem); }
+	100% { transform: none; }
+}
