--- a/drupal_hero_theme/templates/region--navbar.html.twig
+++ b/drupal_hero_theme/templates/region--navbar.html.twig
@@ -1,6 +1,7 @@
 {% if content %}
   <div{{ attributes }}{{ attributes.addClass('b-navbar-content-container',
-    'b-navbar-content-container--padded', 'js-navbar-content-container') }}>
+    'b-navbar-content-container--padded', 'js-navbar-content-container',
+    'b-navbar-content-container--hidden') }}>
     {{ content }}
   </div>
 {% endif %}
