Finished General Layout

--- a/drupal_hero_theme/scss/fonts.scss
+++ b/drupal_hero_theme/scss/fonts.scss
@@ -2,4 +2,4 @@
 // Fonts file for drupal hero theme
 
 $titleFont: 'Permanent Marker', cursive;
-$textFont: 'Roboto', sans-serif;
+$textFont: 'Lato', sans-serif;
